# WAVE-Inversion

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
doc/: README.md
doc/doxygen/: Doxyfile
doc/guide/: .gitignore  WAVE_Inversion_guide.bib  WAVE_Inversion_guide_EN.tex  WAVE_guide.bib  WAVE_guide_EN.tex
par/: .gitignore  .nfs0000000084f5f56a00000147  ToyExample_ac.sh  start_FDSimulation.sh  start_IFOS_checkerboard_dh10cm_Surface_Stream_Elastic2D_and_TMEM2D_gpihpc.sh  start_Inversion.sh  start_Inversion_checkerboard_dh10cm_Surface_Elastic2D_and_TMEM2D_gpihpc.sh  start_Inversion_checkerboard_dh10cm_Surface_Stream_Elastic2D_and_TMEM2D_gpihpc.sh  start_Inversion_checkerboard_dh10cm_Surface_Stream_Elastic2D_gpihpc.sh  start_Inversion_checkerboard_dh10cm_Surface_Stream_TMEM2D_gpihpc.sh  start_Tests.sh  start_tests.sh
par/ToyExample_2Del_trench_vargrid/: ToyExample_el.sh  plotModel_el.m  plotResults_el_2D.m
par/ToyExample_3Dac/: ToyExample_ac.sh  plotResults.m  plotResults_ac_3D.m
par/ToyExample_3Del/: ToyExample_3Del.sh  plotResults.m  plotResults_el_3D.m
par/ToyExample_ac/: ToyExample_ac.sh  plotResults.m  plotResults_ac_2D.m
par/ToyExample_ac_STFI/: ToyExample_ac_STFI.sh  plotResults_ac_2D_STFI.m
par/ToyExample_el/: ToyExample_el.sh  plotResults.m  plotResults_el_2D.m
par/acquisition/: .gitignore  createRecieverArray.m  createRecieverArray.py  createRecievers.m  createRecievers.py  createSources.m  createSources.py  cutCoordinates_checkerboard_dh10cm_Surface_StreamBig_Elastic2D_True.txt  randSources_checkerboard_dh10cm_Surface_Stream_Elastic2D.txt  randSources_checkerboard_dh10cm_Surface_Stream_TMEM2D.txt  sources.mtx  sources.txt  writeMatrix2mtx.m  (+9 more)
src/: .clang-format  CMakeLists.txt  IFOS.cpp  Inversion.cpp  Makefile  main.cpp
src/Common/: Common.hpp  FK.cpp  FK.hpp  HostPrint.hpp  InversionSingle.cpp  InversionSingle.hpp  medianfilter.cpp  medianfilter.hpp
src/Gradient/: Acoustic.cpp  Acoustic.hpp  Elastic.cpp  Elastic.hpp  Gradient.cpp  Gradient.hpp  GradientCalculation.cpp  GradientCalculation.hpp  GradientFactory.cpp  GradientFactory.hpp  GradientSeismic.cpp  GradientSeismic.hpp  SH.cpp  SH.hpp  ViscoSH.cpp  ViscoSH.hpp  Viscoelastic.cpp  Viscoelastic.h.bak  Viscoelastic.hpp
src/GradientEM/: EMEM.cpp  EMEM.hpp  Gradient.cpp  Gradient.hpp  GradientCalculation.cpp  GradientCalculation.hpp  GradientEM.cpp  GradientEM.hpp  GradientFactory.cpp  GradientFactory.hpp  ViscoEMEM.cpp  ViscoEMEM.hpp
src/Misfit/: AbortCriterion.cpp  AbortCriterion.hpp  Misfit.cpp  Misfit.hpp  MisfitFactory.cpp  MisfitFactory.hpp  MisfitL2.cpp  MisfitL2.hpp
src/Optimization/: AbortCriterion.cpp  AbortCriterion.hpp  ConjugateGradient.cpp  ConjugateGradient.hpp  GradientCalculation.cpp  GradientCalculation.hpp  Misfit.cpp  Misfit.hpp  Optimization.cpp  Optimization.hpp  OptimizationFactory.cpp  OptimizationFactory.hpp  SourceReceiverTaper.cpp  SourceReceiverTaper.hpp  SteepestDescent.cpp  SteepestDescent.hpp  StepLengthSearch.cpp  StepLengthSearch.hpp
src/Optimization/Misfit/: Misfit.cpp  Misfit.hpp  MisfitFactory.hpp  MisfitL2.cpp  MisfitL2.hpp
src/Optimization/Preconditioning/: EnergyPreconditioning.cpp  EnergyPreconditioning.hpp  SourceReceiverTaper.cpp  SourceReceiverTaper.hpp
src/Optimization/ZeroLagCrossCorrelation/: ZeroLagXcorr.cpp  ZeroLagXcorr.hpp  ZeroLagXcorr2Dacoustic.cpp  ZeroLagXcorr2Dacoustic.hpp  ZeroLagXcorr2Delastic.cpp  ZeroLagXcorr2Delastic.hpp  ZeroLagXcorr3Dacoustic.cpp  ZeroLagXcorr3Dacoustic.hpp  ZeroLagXcorr3Delastic.cpp  ZeroLagXcorr3Delastic.hpp  ZeroLagXcorrFactory.cpp  ZeroLagXcorrFactory.hpp
src/Parameterisation/: Acoustic.cpp  Acoustic.hpp  Elastic.cpp  Elastic.hpp  Parameterisation.cpp  Parameterisation.hpp  ParameterisationFactory.cpp  ParameterisationFactory.hpp  Viscoelastic.cpp  Viscoelastic.hpp
src/Preconditioning/: EnergyPreconditioning.cpp  EnergyPreconditioning.hpp  SourceReceiverTaper.cpp  SourceReceiverTaper.hpp
src/Scripts/: formatSourceCode.sh
src/SourceEstimation/: SourceEstimation.cpp  SourceEstimation.hpp
src/StepLengthSearch/: StepLengthSearch.cpp  StepLengthSearch.hpp
src/Taper/: Taper.cpp  Taper.hpp  Taper1D.cpp  Taper1D.hpp  Taper2D.cpp  Taper2D.hpp  TaperFactory.cpp  TaperFactory.hpp
src/Tests/: Test_CompareMisfit.cpp
src/Tests/IntegrationTest/: Test_CompareMisfit.cpp
src/Tests/Testfiles/: testSourceTimeInversion_config.txt  testSourceTimeInversion_receiver.mtx  testSourceTimeInversion_receiver.txt  testSourceTimeInversion_referenceSourceSignal.mtx  testSourceTimeInversion_sourceSignal.mtx  testSourceTimeInversion_sources.mtx  testSourceTimeInversion_sources.txt  testSourceTimeInversion_synth.shot_0.p.mtx  testSourceTimeInversion_true.shot_0.p.mtx
src/Tests/UnitTest/: SourceTimeInversionUnitTest.cpp  StepLengthSearchUnitTest.cpp
src/Tools/CreateModel/: ToyModel.cpp  TwoLayer.cpp  ettlinger_linie.cpp
src/Workflow/: Workflow.cpp  Workflow.hpp
src/WorkflowEM/: Workflow.cpp  Workflow.hpp
src/ZeroLagCrossCorrelation/: ZeroLagXcorr.cpp  ZeroLagXcorr.hpp  ZeroLagXcorr2Dacoustic.cpp  ZeroLagXcorr2Dacoustic.hpp  ZeroLagXcorr2Delastic.cpp  ZeroLagXcorr2Delastic.hpp  ZeroLagXcorr2Dsh.cpp  ZeroLagXcorr2Dsh.hpp  ZeroLagXcorr2Dvisco.cpp  ZeroLagXcorr2Dvisco.hpp  ZeroLagXcorr2Dviscoelastic.cpp  ZeroLagXcorr2Dviscoelastic.hpp  ZeroLagXcorr2Dviscosh.cpp  ZeroLagXcorr2Dviscosh.hpp  ZeroLagXcorr3Dacoustic.cpp  ZeroLagXcorr3Dacoustic.hpp  ZeroLagXcorr3Delastic.cpp  ZeroLagXcorr3Delastic.hpp  ZeroLagXcorr3Dvisco.cpp  ZeroLagXcorr3Dvisco.hpp  ZeroLagXcorr3Dviscoelastic.cpp  ZeroLagXcorr3Dviscoelastic.hpp  ZeroLagXcorrFactory.cpp  ZeroLagXcorrFactory.hpp  ZeroLagXcorrSeismic.cpp  ZeroLagXcorrSeismic.hpp
src/ZeroLagCrossCorrelationEM/: ZeroLagXcorr.cpp  ZeroLagXcorr.hpp  ZeroLagXcorr2Demem.cpp  ZeroLagXcorr2Demem.hpp  ZeroLagXcorr2Dtmem.cpp  ZeroLagXcorr2Dtmem.hpp  ZeroLagXcorr2Dviscoemem.cpp  ZeroLagXcorr2Dviscoemem.hpp  ZeroLagXcorr2Dviscotmem.cpp  ZeroLagXcorr2Dviscotmem.hpp  ZeroLagXcorrEM.cpp  ZeroLagXcorrEM.hpp  ZeroLagXcorrFactory.cpp  ZeroLagXcorrFactory.hpp
(+119 files in other folders)
